--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-sign-up></app-sign-up>
+  <app-root></app-root>
 </body>
 </html>
